# variant

./: LICENSE  README.md  build_package.py  build_wheels.sh  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  python-publish.yaml  python-publish.yml
tests/: debug.tsv  debug_3col.tsv  debug_empty.tsv  debug_lpad.tsv  debug_priority.tsv  gene.fa  gene.fa.fai  ms.tsv  ms_wo_header.tsv  sites.tsv  stranded.tsv  test_variant.py
variant/: cli.py  coordinate.py  effect.py  effect_ordering.py  motif.py  seqpy.c  utils.py
